Modified RC4.asm algorithm to use stack as buffer Modified payload.asm to include RC4.asm source code Modified payload.asm to execute mprotect() at entry Modified elf64.c to use offset to edit hard-coded values [IT WORKS !]

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,11 @@ enable_language(ASM_NASM)
 set(CMAKE_C_STANDARD 11)
 
 set(CMAKE_ASM_NASM_OBJECT_FORMAT elf64)
-set(CMAKE_ASM_NASM_FLAGS_DEBUG "-g -Fdwarf")
-add_compile_options(-I ${CMAKE_CURRENT_SOURCE_DIR}/src/asm/ )
+#set(CMAKE_ASM_NASM_FLAGS_DEBUG "-g -Fdwarf")
+add_compile_options(-g -Fdwarf -I ${CMAKE_CURRENT_SOURCE_DIR}/src/asm)
 
 set(INCLUDE_FILES include/woody.h)
-set(C_SOURCE_FILES src/main.c src/utils.c src/elf/elf_common.c src/elf/elf64.c)
-set(ASM_SOURCE_FILES src/asm/payload.asm)
+set(SOURCE_FILES src/main.c src/utils.c src/elf/elf_common.c src/elf/elf64.c src/asm/payload.asm)
 
-add_executable(woody_woodpacker ${C_SOURCE_FILES} ${INCLUDE_FILES})
+add_executable(woody_woodpacker ${SOURCE_FILES} ${INCLUDE_FILES})
 target_include_directories(woody_woodpacker PRIVATE include/)
-
-add_executable(payload ${ASM_SOURCE_FILES})
