--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.13.4)
 project(Woody_Woodpacker ASM_NASM C)
 enable_language(ASM_NASM)
 set(CMAKE_C_STANDARD 11)
@@ -8,7 +8,7 @@ set(CMAKE_ASM_NASM_FLAGS_DEBUG "-g -Fdwarf")
 add_compile_options(-g -Fdwarf -I ${CMAKE_CURRENT_SOURCE_DIR}/src/asm)
 
 set(INCLUDE_FILES include/woody.h)
-set(SOURCE_FILES src/main.c src/utils.c src/elf/elf_common.c src/elf/elf64.c src/asm/payload.asm)
+set(SOURCE_FILES src/main.c src/utils.c src/elf64.c src/asm/payload.asm)
 
 set(LIBFT_INCLUDE_FILES Libft/include/libft.h)
 set(LIBFT_SOURCE_FILES Libft/src/character.c Libft/src/list.c Libft/src/memory.c Libft/src/number.c Libft/src/put.c Libft/src/string.c)
